# designtools

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  test-colors.txt
designtools/: extract_swatches.py  make_sequence.py  ratio_maker.py  scale_sequence.py  sequence_scaler.py  swatch_extractor.py
designtools/color/: __init__.py  _color_util.py  _models.py  _types.py  collectors.py  grouping.py  sorters.py
designtools/common/: __init__.py  _common.py
designtools/graphics/: swatch_renderer.py
designtools/graphics/extractors/: __init__.py  _color_text.py  _types.py
designtools/graphics/svg/: __init__.py  (+2 more)
designtools/mathutil/: _constants.py  _range.py  _seq_utils.py  _sequences.py
examples/: example.md
pydesigntools/: ratio_maker.py  sequence_scaler.py  swatch_extractor.py
pydesigntools/color/: __init__.py  _color_util.py  _types.py  collectors.py  grouping.py  sorters.py
pydesigntools/graphics/: __init__.py  swatch_renderer.py
pydesigntools/mathutil/: __init__.py  _constants.py  _range.py  _seq_utils.py  _sequences.py  _types.py
pydesigntools/util/: __init__.py  _list_util.py
src/: design_math.py  models.py  old_models.py  old_swatch_extractor.py  swatch_extractor.py
tests/test_color/: test_collectors.py  test_color_util.py  test_grouping.py  test_models.py  test_sorters.py  test_types.py
tests/test_common/: test_common.py
tests/test_graphics/: test_swatch_renderer.py
tests/test_math/: test_range.py  test_seq_utils.py
tests/test_mathutil/: test_range.py  test_seq_utils.py
tests/test_util/: test_util.py
(+10 files in other folders)
