[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "designtools"
version = "0.1b1"
description = "Assorted visual design utilities"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Shannon Lucas" }]
maintainers = [{ name = "Shannon Lucas" }]
keywords = ["design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = ["pycairo",]

[project.urls]
Homepage = "https://github.com/brokenarc/designtools"
Documentation = "https://github.com/brokenarc/designtools/blob/main/README.md"
Repository = "https://github.com/brokenarc/designtools.git"
Changelog = "https://github.com/brokenarc/designtools/blob/main/README.md"

[project.optional-dependencies]
dev = ["pytest"]
